FIX: SWAGGER DOCS
